--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <hr />
     <p><b>Server IP : mcser.gq:35544</b></p>
     <p><b>备用IP：122.225.196.209:35544</b></p>
+    <img src= "E:\Files\壁纸\Windows 10 Pride\1.jpg">
   </body>
 </html>
